network-policies/lateral-movement-demo/cilium-l3-l4.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "secure-east-west"
spec:
  description: "L3-L4 policy to restrict deathstar access to empire ships only"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: shellshockable
      app.kubernetes.io/instance: vuln-bash
  ingress:
  - fromEndpoints:
    - matchLabels:
        tier: load-balance
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
